# moving-cells

./: .gitignore  CMakeLists.static-cells.txt  CMakeLists.txt  README.md  moving_cells.cpp  moving_cells.hpp
calibrate/: calibrate.R  calibrate.input  calibrate.output
src/: .#moving_cells.hpp  cloud.cpp  cloud.hpp  cloud3D.cpp  cloud3D.hpp  cloudGPU.cpp  cloudGPU.hpp  incarnasuono.cpp  kinect.cpp  kinect.hpp  moving_cells.cpp  moving_cells.hpp  proto_kinect.cpp  setup_kinect.cpp  singing_cells.R  singing_cells.cpp  singing_cells.hpp  static_cells.cpp  static_cells.hpp  static_cells_3D.cpp  time_delays.cpp  time_ghosts.cpp  webcam_delays.cpp
tools/: compute.distribution.R  singing_cells.R
tools/experiments/: evolved_config.R  fitness.csv  fitness_metadata  format_config.sh  parameter_analysis.R  random_config.R  run_all_config.sh  run_best_config.sh
tools/partikules/: adjust_parameter_sequences.R  adjust_particle_positions.R  create-video-HD.sh  create-video-LD.sh  crop-video-HD.sh  crop-video-LD.sh  static-cells-inout-sequence.csv  static-cells-input-sequence-000.0000.csv  static-cells-input-sequence-054.7186.csv  static-cells-input-sequence-090.9014.csv  static-cells-input-sequence-100.5000.csv  static-cells-input-sequence-103.csv  static-cells-input-sequence-144.csv  static-cells-input-sequence-174.csv  static-cells-input-sequence-final.csv  static-cells-input-sequence.csv  static-cells-input-sequence.csv.backup1  static-cells-input-sequence.csv.backup2  static-cells-input-sequence.csv.backup3  static-cells-input-sequence.csv.backup4  static-cells-input-sequence.csv.backup5  static-cells-input-sequence.csv.backup6
tools/partikules/crop_screens/: crop-screens  crop_screens.cpp
